jus cambios responsive

--- a/generos.html
+++ b/generos.html
@@ -9,31 +9,30 @@
     <title>Géneros</title>
 </head>
 <body>
-        <header>
-                <section class="cajainicio">
-                    <nav class="header-items">
-                        <article class="BarraDeBusqueda">
-                                <article class="menu">
-                                    <a href="index.html"><img class="logo" src="./img/soundd1.png" alt="logo"></a>
-                                    <h1><a href="index.html" class="sound-now">SOUND-NOW</a></h1>
-                                        <a href="generos.html" class="barratexto">Géneros</a>
-                                        <a href="artistas.html" class="barratexto">Artistas</a>
-                                        <a href="albumes.html" class="barratexto">Álbumes</a>
-                                        <a href="canciones.html" class="barratexto">Canciones</a>
-                                        <a href="playlists.html" class="barratexto">Playlists</a>
-                                <form action="search-results.html" method="GET" class="buscar">
-                                    <input id= "ba" type="text" name="search" placeholder = "Search">
-                                    <button type="submit" class="button"> Buscar</button>
-                                </form>
-                                <article class="perfil-menu">
-                                    <section class="icperfil">
-                                        <a href="perfil.html"><i class="fas fa-user-circle icons" id="i"></i><h1 class="user"><img class="login"src="./img/login.png" alt=""></h1></a>
-                                    </section>
-                                </article>
-                         </article>
-                </nav>
-                </section>
-            </header>
+    <header class="responsiveheader">
+        <section class="cajainicio">
+            <nav class="header-items">
+                <article class="BarraDeBusqueda">
+                        <article class="menu">
+                            <a href="index.html"><img class="logo" src="./img/soundd1.png" alt="logo"></a>
+                            <a href="generos.html" class="barratexto">Géneros</a>
+                            <a href="artistas.html" class="barratexto">Artistas</a>
+                            <a href="albumes.html" class="barratexto">Álbumes</a>
+                            <a href="canciones.html" class="barratexto">Canciones</a>
+                            <a href="playlists.html" class="barratexto">Playlists</a>
+                            <article class="icperfil">
+                               <a href="perfil.html"><i class="fas fa-user-circle icons" id="i"></i><h1 class="user"><img class="login"src="./img/login.png" alt=""></h1></a>
+                            </article> 
+                            <form action="search-results.html" method="GET" class="buscar">
+                               <input id= "ba" type="text" name="search" placeholder = "Search">
+                               <button type="submit" class="button">Buscar</button>
+                            </form>
+                       
+                        </article>
+                </article>
+            </nav>
+        </section>
+    </header>
 <main>          
     <section class="acaja">
             <h2 class="pag"> Géneros</h2>
@@ -79,7 +78,7 @@
             <a href="https://www.instagram.com/soundnow_/"><img src="./img/insta.png" alt="instagram" class="instagram"></a>
         </article>
         <article class="nombre"> 
-            <p> Hania Achaval, Justina Basombrio, Malena Bensadon </p>
+            <p>Hania Achaval, Justina Basombrio, Malena Bensadon </p>
         </article>
         <article> <img class="footerpic" src="./img/footer.png" alt="">
         </article>
