--- a/albumes.html
+++ b/albumes.html
@@ -40,7 +40,8 @@
                 <ul class="listas">
                     <article class="album">
                         <a href="./detail-album.html"><img class="fotos" src="./img/x.jpg" alt=""></a>
-                        <h2 class="texto"><a href="./detail-album.html" class="names">X</a>by<a href="./detail-artist.html" class="names">Ed Sheeran</a></h2>
+                        <h2 class="texto"><a href="./detail-album.html" class="names">X</h2>
+                        <h2></a>by<a href="./detail-artist.html" class="names">Ed Sheeran</a></h2>
                         <p class="texto"> Lanzamiento: 20 de junio de 2014</p>
                         <p class="texto">Generos: Pop, R&B y hip hop</p>
                         <p>Canciones del Album: </p>
