--- a/albumes.html
+++ b/albumes.html
@@ -40,10 +40,9 @@
                 <ul class="listas">
                     <article class="album">
                         <a href="./detail-album.html"><img class="fotos" src="./img/x.jpg" alt=""></a>
-                        <h2 class="texto"><a href="./detail-album.html" class="names">X</h2>
-                        <h2></a>by<a href="./detail-artist.html" class="names">Ed Sheeran</a></h2>
+                        <h2 class="texto"><a href="./detail-album.html" class="names">X</a>by<a href="./detail-artist.html" class="names">Ed Sheeran</a></h2>
                         <p class="texto"> Lanzamiento: 20 de junio de 2014</p>
-                        <p class="texto">Generos: Pop, R&B y hip hop</p>
+                        <p class="texto"><a href="./generos.html" class="pgeneros">Generos: Pop, R&B y hip hop</a></p>
                         <p>Canciones del Album: </p>
                         <ul class="listadetallealbum">
                                 <li>One</li>
@@ -68,7 +67,7 @@
                         <a href="./detail-album.html"><img class="fotos" src="./img/evolve imagine dragons.jpg" alt=""></a>
                         <h2 class="texto"><a href="./detail-album.html" class="names">Evolve</a>by<a href="./detail-artist.html" class="names">Imagine Dragons</a></h2>
                         <p class="texto"> Lanzamiento: 23 de junio de 2017</p>
-                        <p class="texto">Generos: Electro pop, Rock alternativo, Indie rock, Indie pop, Alternative dance, Synth pop, Indie electrónica</p>
+                        <p class="texto"><a href="./generos.html" class="pgeneros">Generos: Electro pop, Rock alternativo, Indie rock, Indie pop, Alternative dance, Synth pop, Indie electrónica</a></p>
                         <p>Canciones del Album: </p>
                         <ul class="listadetallealbum">
                                 <li>I Don't Know Why</li>
@@ -89,7 +88,7 @@
                     <a href="./detail-album.html"><img class="fotos" src="./img/justin-bieber-justice.jpeg" alt=""></a>
                     <h2 class="texto"><a href="./detail-album.html" class="names">Justice</a>by<a href="./detail-artist.html" class="names">Justin Bieber</a></h2>
                     <p class="texto"> Lanzamiento: 19 de marzo, 2021</p>
-                    <p class="texto">Generos: Pop, R&B contemporáneo, R&B alternativo</p>
+                    <p class="texto"><a href="./generos.html" class="pgeneros">Generos: Pop, R&B contemporáneo, R&B alternativo</a></p>
                     <p>Canciones del Album: </p>
                      <ul class="listadetallealbum">
                             <li>Much</li>
@@ -115,7 +114,7 @@
                     <a href="./detail-album.html"><img class="fotos" src="./img/tini.jpg" alt=""></a>
                     <h2 class="texto"><a href="./detail-album.html" class="names">TINI TINI TINI</a>by<a href="./detail-artist.html" class="names">Tini</a></h2>
                     <p class="texto"> Lanzamiento: 3 de diciembre de 2020</p>
-                    <p class="texto">Generos: Pop, reguetón, balada, trap</p>
+                    <p class="texto"><a href="./generos.html" class="pgeneros">Generos: Pop, reguetón, balada, trap</a></p>
                     <p>Canciones del Album: </p>
                      <ul class="listadetallealbum">
                         <li>Un beso en Madrid</li>
@@ -139,9 +138,8 @@
                     <a href="./detail-album.html"><img class="fotos" src="./img/Heathens.jpg" alt=""></a>
                     <h2 class="texto"><a href="./detail-album.html" class="names">Heathens</a>by<a href="./detail-artist.html" class="names">Twenty One Pilots</a></h2>
                     <p class="texto"> Lanzamiento: 16 de junio, 2016</p>
-                    <p class="texto"> Generos: Rap rock</p>
-                    <p>Canciones del Album: </p>
-                    <a href="./canciones.html">Canciones</a>del <a href="albumes.html">Album</a>
+                    <p class="texto"><a href="./generos.html" class="pgeneros">Generos: Rap rock</a></p>
+                    <p><a href="./canciones.html">Canciones</a> del <a href="albumes.html">Album</a></p>
                     <ul class="listadetallealbum">
                         <li>Purple Lamborghini</li>
                         <li>Sucker for Pain</li>
