--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 </li>
 
                 <li class="caja">
-                    <a href="./detail-track.html"><img class="fotos" src="./img/bobmarleynowoman.jpg" alt=""></a>
+                    <a href="./detail-track.html"><img class="fotos" src="./img/bobmarleynwnc.jpg" alt=""></a>
                     <a href="./detail-track.html" class="names">No Woman No Cry</a>
                     <a href="./detail-artist.html"class="names">by Bob Marley</a>
                     <a href="./playlists.html"><img class="favx"src="./img/fav.jpg" alt=""></a>
