--- a/playlists.html
+++ b/playlists.html
@@ -8,7 +8,7 @@
     <link  class="logo"rel="icon" href="img/arriba.png" type="image/png" />
     <title>Playlists</title>
 </head>
-<body>
+<body class="bodymyplaylist">
     <header class="responsiveheader">
         <section class="cajainicio">
             <nav class="header-items">
