--- a/albumes.html
+++ b/albumes.html
@@ -37,13 +37,13 @@
             <section class="acaja">
                 <h2 class="pag">Álbumes</h2>
                 <img class="albumpic" src="./img/hmj.png" alt="">
-                <ul class="listas">
+                <article class="listas">
                     <article class="album">
                         <a href="./detail-album.html"><img class="fotos" src="./img/x.jpg" alt=""></a>
                         <h2 class="texto"><a href="./detail-album.html" class="names">X</a>by<a href="./detail-artist.html" class="names">Ed Sheeran</a></h2>
                         <p class="texto"> Lanzamiento: 20 de junio de 2014</p>
                         <p class="texto"><a href="./generos.html" class="pgeneros">Generos: Pop, R&B y hip hop</a></p>
-                        <p>Canciones del Album: </p>
+                        <p><a href="./canciones.html">Canciones</a> del <a href="albumes.html">Album</a></p>
                         <ul class="listadetallealbum">
                                 <li>One</li>
                                 <li>I'm a Mess</li>
@@ -68,7 +68,7 @@
                         <h2 class="texto"><a href="./detail-album.html" class="names">Evolve</a>by<a href="./detail-artist.html" class="names">Imagine Dragons</a></h2>
                         <p class="texto"> Lanzamiento: 23 de junio de 2017</p>
                         <p class="texto"><a href="./generos.html" class="pgeneros">Generos: Electro pop, Rock alternativo, Indie rock, Indie pop, Alternative dance, Synth pop, Indie electrónica</a></p>
-                        <p>Canciones del Album: </p>
+                        <p><a href="./canciones.html">Canciones</a> del <a href="albumes.html">Album</a></p>
                         <ul class="listadetallealbum">
                                 <li>I Don't Know Why</li>
                                 <li>Whatever It Takes</li>
@@ -89,7 +89,7 @@
                     <h2 class="texto"><a href="./detail-album.html" class="names">Justice</a>by<a href="./detail-artist.html" class="names">Justin Bieber</a></h2>
                     <p class="texto"> Lanzamiento: 19 de marzo, 2021</p>
                     <p class="texto"><a href="./generos.html" class="pgeneros">Generos: Pop, R&B contemporáneo, R&B alternativo</a></p>
-                    <p>Canciones del Album: </p>
+                    <p><a href="./canciones.html">Canciones</a> del <a href="albumes.html">Album</a></p>
                      <ul class="listadetallealbum">
                             <li>Much</li>
                             <li>Deserve You</li>
@@ -115,7 +115,7 @@
                     <h2 class="texto"><a href="./detail-album.html" class="names">TINI TINI TINI</a>by<a href="./detail-artist.html" class="names">Tini</a></h2>
                     <p class="texto"> Lanzamiento: 3 de diciembre de 2020</p>
                     <p class="texto"><a href="./generos.html" class="pgeneros">Generos: Pop, reguetón, balada, trap</a></p>
-                    <p>Canciones del Album: </p>
+                    <p><a href="./canciones.html">Canciones</a> del <a href="albumes.html">Album</a></p>
                      <ul class="listadetallealbum">
                         <li>Un beso en Madrid</li>
                         <li>Fresa</li>
@@ -160,7 +160,7 @@
                         <li>FI Started a Joke</li>
                 </ul>    
                 </article>
-                </ul>
+            </article>
         </section>
 
     </main>
