--- a/artistas.html
+++ b/artistas.html
@@ -33,13 +33,14 @@
             </nav>
         </section>
     </header>
-            <main>
-        <section class="acaja">
+
+<main>
+    <section class="acaja">
                 <h2 class="pag">Artistas</h2>
 
-                <ul class="listas">
+                <article class="listas">
     <img class="albumpic" src="./img/hmj1.png" alt="">
-                    <li class="caja">
+                    <article class="caja">
                         <a href="./detail-artist.html" class="names">Justin Bieber</a>
                         <a href="./detail-artist.html"><img class="fotos" src="./img/bieber.jpg" alt=""></a>
                         <ul class="bobtopfive">
@@ -50,8 +51,8 @@
                                 <li>Love Yourself</li>
                                 <li>Boyfriend</li>
                         </ul>
-                    </li>
-                    <li class="caja">
+                    </article>
+                    <article class="caja">
                         <a href="./detail-artist.html" class="names">Tini</a>
                         <a href="./detail-artist.html"><img class="fotos" src="./img/retratotini2.jpg" alt=""></a>
                         <ul class="bobtopfive">
@@ -62,8 +63,8 @@
                                 <li>Consejo de amor</li>
                                 <li>Quiero volver</li>
                         </ul>
-                    </li>
-                    <li class="caja">
+                    </article>
+                    <article class="caja">
                         <a href="./detail-artist.html" class="names">Bob Marley</a>
                         <a href="./detail-artist.html"><img class="fotos" src="./img/bob-marley.jpg" alt=""></a>
                         <ul class="bobtopfive">
@@ -74,8 +75,8 @@
                             <li>Jamming</li>
                             <li>One Love / People Get Ready</li>
                     </ul>
-                    </li>
-                    <li class="caja">
+                    </article>
+                    <article class="caja">
                         <a href="./detail-artist.html" class="names">Ricky Martin</a>
                         <a href="./detail-artist.html"><img class="fotos" src="./img/ricky2.jpg" alt=""></a>
                         <ul class="bobtopfive">
@@ -86,8 +87,8 @@
                             <li>Maria</li>
                             <li>Vente pa'ca</li>
                     </ul>
-                    </li>
-                    <li class="caja">
+                    </article>
+                    <article class="caja">
                         <a href="./detail-artist.html" class="names">Harry Styles</a>
                         <a href="./detail-artist.html"><img class="fotos" src="./img/harry2.png" alt=""></a>
                         <ul class="bobtopfive">
@@ -98,8 +99,8 @@
                             <li>Sign of the Times</li>
                             <li>Watermelon Sugar</li>
                         </ul>
-                    </li>
-                </ul>
+                    </article>
+                </article>
 
         </section>
             </main>
