--- a/generos.html
+++ b/generos.html
@@ -34,41 +34,45 @@
             </nav>
         </section>
     </header>
-
     <main>          
         <section class="acaja">
-                <h2 class="pag"> Géneros</h2>
-                <article class="listas">
+            <h2 class="pag"> Géneros</h2>
+            <article class="listas">
                     <img class="albumpic" src="./img/hmj2.png" alt="">
-                  <article class="caja">
-                     <a href="./detail-album.html" class="names">LATINO</a> 
-                     <a href="./detail-genres.html"><img class="fotos" src="./img/latin.jpeg" alt="FOTO GENERO LATINO"></a>
-                  </article>
-
-                 <article class="caja">
-                            <a href="./detail-album.html" class="names">POP</a>
-                            <a href="./detail-genres.html"><img class="fotos" src="./img/pop.jpeg" alt="FOTO GENERO POP"></a>
-                 </article>
-
-                 <article class="caja">
-                           <a href="./detail-album.html" class="names">ROCK NACIONAL</a>
-                           <a href="./detail-genres.html"><img class="fotos" src="./img/nacionalr.jpg" alt="FOTO GENERO ROCK NACIONAL"></a>
-                </article>
-
-                <article class="caja">
-                           <a href="./detail-album.html" class="names">REGGAE</a>
-                           <a href="./detail-genres.html"><img class="fotos" src="./img/reggae.jpg" alt="FOTO GENERO HIPPIE"></a>
-                </article>
-
-                <article class="caja">
-                           <a href="./detail-album.html" class="names">HOUSE</a>
-                           <a href="./detail-genres.html"><img class="fotos" src="./img/house.jpeg" alt="FOTO GENERO HOUSE"></a>
-                </article>
-                </article>
+                <ul class="caja">
+                     <li> 
+                        <a href="./detail-album.html" class="names">LATINO</a> 
+                        <a href="./detail-genres.html"><img class="fotos" src="./img/latin.jpeg" alt="FOTO GENERO LATINO"></a>
+                    </li>
+                </ul> 
+                <ul class="caja">
+                    <li>
+                         <a href="./detail-album.html" class="names">POP</a>
+                         <a href="./detail-genres.html"><img class="fotos" src="./img/pop.jpeg" alt="FOTO GENERO POP"></a>
+                    </li>
+                 </ul>
+                 <ul class="caja">
+                    <li>
+                        <a href="./detail-album.html" class="names">ROCK NACIONAL</a>
+                        <a href="./detail-genres.html"><img class="fotos" src="./img/nacionalr.jpg" alt="FOTO GENERO ROCK NACIONAL"></a>
+                    </li>
+                </ul>
+                <ul class="caja">
+                    <li>
+                        <a href="./detail-album.html" class="names">REGGAE</a>
+                        <a href="./detail-genres.html"><img class="fotos" src="./img/reggae.jpg" alt="FOTO GENERO HIPPIE"></a>
+                    </li>
+                </ul>
+                <ul class="caja">
+                    <li>
+                        <a href="./detail-album.html" class="names">HOUSE</a>
+                        <a href="./detail-genres.html"><img class="fotos" src="./img/house.jpeg" alt="FOTO GENERO HOUSE"></a>
+                    </li>
+                </ul>
+            </article>
        </section>
     
     </main>
-
 <footer class="responsivefooter">
     <section class="footer">
         <article class="seguinos">
