--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header class="responsiveheader">
         <section class="cajainicio">
-            <nav class="header-items">
+            <article class="header-items">
                 <article class="BarraDeBusqueda">
                         <article class="menu">
                             <a href="index.html"><img class="logo" src="./img/soundd1.png" alt="logo"></a>
@@ -30,9 +30,10 @@
                        
                         </article>
                 </article>
-            </nav>
+            </article>
         </section>
     </header>
+    
     <main>
         <section class="container">
             <img class="introhome" src="./img/intro.png" alt="">
