--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <section class="container">
             <img class="introhome" src="./img/intro.png" alt="">
 
-            <h2 class="titulos"><a href="albumes.html" class="barratexto">Canciones</a></h2>
+            <h2 class="titulos"><a href="canciones.html" class="barratexto">Canciones</a></h2>
             
                <ul class="listas">
                
