--- a/albumes.html
+++ b/albumes.html
@@ -45,22 +45,22 @@
                         <p class="texto"><a href="./generos.html" class="pgeneros">Generos: Pop, R&B y hip hop</a></p>
                         <p><a href="./canciones.html">Canciones</a> del <a href="albumes.html">Album</a></p>
                         <ul class="listadetallealbum">
-                                <li>One</li>
-                                <li>I'm a Mess</li>
-                                <li>Sing</li>
-                                <li>Don't</li>
-                                <li>Nina</li>
-                                <li>Photograph</li>
-                                <li>Bloodstream</li>
-                                <li>Tenerife Sea</li>
-                                <li>Runaway</li>
-                                <li>The Man</li>
-                                <li>Thinking out Loud</li>
-                                <li>Afire Love</li>
-                                <li>Take It Back</li>
-                                <li>Shirtsleeves</li>
-                                <li>Even My Dad Does Sometimes</li>
-                                <li>I See Fire</li>
+                                <li><a href="./detail-track.html">One</a></li>
+                                <li><a href="./detail-track.html">I'm a Mess</a></li>
+                                <li><a href="./detail-track.html">Sing</a></li>
+                                <li><a href="./detail-track.html">Don't</a></li>
+                                <li><a href="./detail-track.html">Nina</a></li>
+                                <li><a href="./detail-track.html">Photograph</a></li>
+                                <li><a href="./detail-track.html">Bloodstream</a></li>
+                                <li><a href="./detail-track.html">Tenerife Sea</a></li>
+                                <li><a href="./detail-track.html">Runaway</a></li>
+                                <li><a href="./detail-track.html">The Man</a></li>
+                                <li><a href="./detail-track.html">Thinking out Loud</a></li>
+                                <li><a href="./detail-track.html">Afire Love</a></li>
+                                <li><a href="./detail-track.html">Take It Back</a></li>
+                                <li><a href="./detail-track.html">Shirtsleeves</a></li>
+                                <li><a href="./detail-track.html">Even My Dad Does Sometimes</a></li>
+                                <li><a href="./detail-track.html">I See Fire</a></li>
                         </ul>      
                         </article>
                     <article class="album">
@@ -70,17 +70,17 @@
                         <p class="texto"><a href="./generos.html" class="pgeneros">Generos: Electro pop, Rock alternativo, Indie rock, Indie pop, Alternative dance, Synth pop, Indie electrónica</a></p>
                         <p><a href="./canciones.html">Canciones</a> del <a href="albumes.html">Album</a></p>
                         <ul class="listadetallealbum">
-                                <li>I Don't Know Why</li>
-                                <li>Whatever It Takes</li>
-                                <li>Believer</li>
-                                <li>Walking the Wire</li>
-                                <li>Rise Up</li>
-                                <li>I'll Make It Up to You</li>
-                                <li>Yesterday</li>
-                                <li>Mouth of the River</li>
-                                <li>Thunder</li>
-                                <li>Start Over</li>
-                                <li>Dancing in the Dark</li>
+                                <li><a href="./detail-track.html">I Don't Know Why</a></li>
+                                <li><a href="./detail-track.html">Whatever It Takes</a></li>
+                                <li><a href="./detail-track.html">Believer</a></li>
+                                <li><a href="./detail-track.html">Walking the Wire</a></li>
+                                <li><a href="./detail-track.html">Rise Up</a></li>
+                                <li><a href="./detail-track.html">I'll Make It Up to You</a></li>
+                                <li><a href="./detail-track.html">Yesterday</a></li>
+                                <li><a href="./detail-track.html">Mouth of the River</a></li>
+                                <li><a href="./detail-track.html">Thunder</a></li>
+                                <li><a href="./detail-track.html">Start Over</a></li>
+                                <li><a href="./detail-track.html">Dancing in the Dark</a></li>
                         </ul>   
                     </article>
 
@@ -91,22 +91,22 @@
                     <p class="texto"><a href="./generos.html" class="pgeneros">Generos: Pop, R&B contemporáneo, R&B alternativo</a></p>
                     <p><a href="./canciones.html">Canciones</a> del <a href="albumes.html">Album</a></p>
                      <ul class="listadetallealbum">
-                            <li>Much</li>
-                            <li>Deserve You</li>
-                            <li>As I Am</li>
-                            <li>Off My Face</li>
-                            <li>Holy</li>
-                            <li>Unstable</li>
-                            <li>MKL Interlude</li>
-                            <li>Die For You</li>
-                            <li>Hold On</li>
-                            <li>Somebody</li>
-                            <li>Ghost</li>
-                            <li>Peaches</li>
-                            <li>Love You Different</li>
-                            <li>Loved By You</li>
-                            <li>Anyone</li>
-                            <li>Loneley</li>
+                            <li><a href="./detail-track.html">Much</a></li>
+                            <li><a href="./detail-track.html">Deserve You</a></li>
+                            <li><a href="./detail-track.html">As I Am</a></li>
+                            <li><a href="./detail-track.html">Off My Face</a></li>
+                            <li><a href="./detail-track.html">Holy</a></li>
+                            <li><a href="./detail-track.html">Unstable</a></li>
+                            <li><a href="./detail-track.html">MKL Interlude</a></li>
+                            <li><a href="./detail-track.html">Die For You</a></li>
+                            <li><a href="./detail-track.html">Hold On</a></li>
+                            <li><a href="./detail-track.html">Somebody</a></li>
+                            <li><a href="./detail-track.html">Ghost</a></li>
+                            <li><a href="./detail-track.html">Peaches</a></li>
+                            <li><a href="./detail-track.html">Love You Different</a></li>
+                            <li><a href="./detail-track.html">Loved By You</a></li>
+                            <li><a href="./detail-track.html">Anyone</a></li>
+                            <li><a href="./detail-track.html">Loneley</a></li>
                     </ul>      
                 </article>
 
@@ -117,20 +117,20 @@
                     <p class="texto"><a href="./generos.html" class="pgeneros">Generos: Pop, reguetón, balada, trap</a></p>
                     <p><a href="./canciones.html">Canciones</a> del <a href="albumes.html">Album</a></p>
                      <ul class="listadetallealbum">
-                        <li>Un beso en Madrid</li>
-                        <li>Fresa</li>
-                        <li>Si tú supieras</li>
-                        <li>Tuyo</li>
-                        <li>Te olvidaré</li>
-                        <li>Acércate</li>
-                        <li>Playa</li>
-                        <li>Ella Dice</li>
-                        <li>Duele</li>
-                        <li>Recuerdo</li>
-                        <li>Oye</li>
-                        <li>Diciembre</li>
-                        <li>Sueltate el pelo</li>
-                        <li>22</li>
+                        <li><a href="./detail-track.html">Un beso en Madrid</a></li>
+                        <li><a href="./detail-track.html">Fresa</a></li>
+                        <li><a href="./detail-track.html">Si tú supieras</a></li>
+                        <li><a href="./detail-track.html">Tuyo</a></li>
+                        <li><a href="./detail-track.html">Te olvidaré</a></li>
+                        <li><a href="./detail-track.html">Acércate</a></li>
+                        <li><a href="./detail-track.html">Playa</a></li>
+                        <li><a href="./detail-track.html">Ella Dice</a></li>
+                        <li><a href="./detail-track.html">Duele</a></li>
+                        <li><a href="./detail-track.html">Recuerdo</a></li>
+                        <li><a href="./detail-track.html">Oye</a></li>
+                        <li><a href="./detail-track.html">Diciembre</a></li>
+                        <li><a href="./detail-track.html">Sueltate el pelo</a></li>
+                        <li><a href="./detail-track.html">22</a></li>
                     </ul>      
                 </article>
 
@@ -141,23 +141,23 @@
                     <p class="texto"><a href="./generos.html" class="pgeneros">Generos: Rap rock</a></p>
                     <p><a href="./canciones.html">Canciones</a> del <a href="albumes.html">Album</a></p>
                     <ul class="listadetallealbum">
-                        <li>Purple Lamborghini</li>
-                        <li>Sucker for Pain</li>
-                        <li>Heathens</li>
-                        <li>Standing In The Rain </li>
-                        <li>Gangsta</li>
-                        <li>Know Better</li>
-                        <li>You Don't Own Me</li>
-                        <li>Without Me</li>
-                        <li>Super Freak</li>
-                        <li>Wreak Havoc</li>
-                        <li>Medieval Warfare</li>
-                        <li>Bohemian Rhapsody</li>
-                        <li>Slippin' Into Darkness</li>
-                        <li>Fortunate Son</li>
-                        <li>Spirit In The Sky</li>
-                        <li>I'd Rather Go Blind</li>
-                        <li>FI Started a Joke</li>
+                        <li><a href="./detail-track.html">Purple Lamborghini</a></li>
+                        <li><a href="./detail-track.html">Sucker for Pain</a></li>
+                        <li><a href="./detail-track.html">Heathens</a></li>
+                        <li><a href="./detail-track.html">Standing In The Rain </a></li>
+                        <li><a href="./detail-track.html">Gangsta</a></li>
+                        <li><a href="./detail-track.html">Know Better</a></li>
+                        <li><a href="./detail-track.html">You Don't Own Me</a></li>
+                        <li><a href="./detail-track.html">Without Me</a></li>
+                        <li><a href="./detail-track.html">Super Freak</a></li>
+                        <li><a href="./detail-track.html">Wreak Havoc</a></li>
+                        <li><a href="./detail-track.html">Medieval Warfare</a></li>
+                        <li><a href="./detail-track.html">Bohemian Rhapsody</a></li>
+                        <li><a href="./detail-track.html">Slippin' Into Darkness</a></li>
+                        <li><a href="./detail-track.html">Fortunate Son</a></li>
+                        <li><a href="./detail-track.html">Spirit In The Sky</a></li>
+                        <li><a href="./detail-track.html">I'd Rather Go Blind</a></li>
+                        <li><a href="./detail-track.html"> FI Started a Joke</a></li>
                 </ul>    
                 </article>
             </article>
