--- a/playlists.html
+++ b/playlists.html
@@ -95,7 +95,7 @@
 
                 <article class="cajapl">
                     <article class="fotopl">
-                        <a href="./detail-track.html"><img class="fotop" src="./img/bobmarleynowoman.jpg" alt=""></a>
+                        <a href="./detail-track.html"><img class="fotop" src="./img/bobmarleynwnc.jpg" alt=""></a>
                     </article>
                    <article class="infopl">
                     <h2> <a href="./detail-track.html"> No Woman No Cry</a> <a href="./playlists.html"></a></h2>
