--- a/perfil.html
+++ b/perfil.html
@@ -36,7 +36,7 @@
     <main class="formulario">
 
         <article class="slider">
-            <h3 class= "names">¡Bienvenido a tu perfil de Sound-Now!</h3>
+            <h3 class= "volverainicio">¡Bienvenido a tu perfil de Sound-Now!</h3>
             <ul>
                     <li><img src="img/auriculares.jpg" alt=""></li>
                     <li><img src="img/fiesta.jpg" alt=""></li>
