--- a/playlists.html
+++ b/playlists.html
@@ -34,10 +34,9 @@
         </section>
     </header>
         
-    <main class="iniciasesionforms" >
-
+    <main>
             <section class="playlist">
-                <h1 class="titulos">Mi Playlist</a></h1>
+                <h1 class="titulos">Mi Playlist</h1>
 
             <article class="containerpl">
                 
