--- a/playlists.html
+++ b/playlists.html
@@ -34,7 +34,7 @@
         </section>
     </header>
         
-    <main>
+    <main class="fondodebyn">
             <section class="playlist">
                 <h1 class="titulos">Mi Playlist</h1>
 
