--- a/search-results.html
+++ b/search-results.html
@@ -36,7 +36,8 @@
     
     <main>
         <section>
-            <h2 class= "titulos">Resultados de tu búsqueda:</h2>
+            <h2 class= "titulos">Oops! No se encontaron resultados para tu búsqueda</h2>
+            <h2 class="titulos">Búsqueda relacionada:</h2>
             <ul class="detailx">
                 <li class="detail"> <a href="./detail-track.html"><img class="fotosd" src="./img/peaches.jpeg" alt=""> <p class="namesx">Peaches</p></a></p></a></li>
                 <li class="detail"> <a href="./detail-album.html"><img class="fotosd" src="./img/tini.jpg" alt=""> <p class="namesx">TINI TINI TINI</p></a></li>
